(#12)[3/21/2018-14:45 1.1.2 Sergix]
	Fixed issue with template.json not being able to be read.
	Pushed updates to Git.

(#11)[3/21/2018-11:38 1.1.1 Sergix]
	Forgot the shebang line...
	Pushed updates to Git.

(#10)[3/21/2018-11:21 1.1.0 Sergix]
	Added "ignore" property for "changelog" in rfconfig.
	Changed "compression" property to array.
	Fixed template.json issue.

(#9)[3/21/2018-10:27 1.0.1 Sergix]
	Fixed dependency listing in package.json.
	Fixed application not running from global as cli.
	Updated README.md.
	Pushed updates to Git.

(#8)[3/20/2018-22:41 1.0.0 Sergix]
	Fixed virtually all known issues!
	Added basic Maven pom.xml support.
	Ready for a 1.0.0 release! (Haha, a bit ironic I must say.)
	Uploaded project to npm.
	Pushed updates to Git.

(#7)[3/20/2018-16:49 0.1.0 Sergix]
	Fixed issue in config.ts file writing.
	Added console colors through 'colors' npm library.
	Moved config template to template.json file.

(#6)[1/6/2018-23:30 0.1.0 Sergix]
	Created "dev" branch.
	Merged #1.
		- Created "CODE_OF_CONDUCT.md".
		- "add-code-of-conduct" branch merged into "dev".
	Pushed updates to Git.

(#5)[1/6/2018-23:30 0.1.0 Sergix]
	Created repository on GitHub.
	This project is now officially named "Releaseflow".
	Created README and LICENSE.
	Changed config file name from "vbconfig.json" to "rfconfig.json".
	Pushed updates to Git.

(#4)[1/6/2018-16:44 0.1.0 Sergix]
	Created exec.ts, docs.ts, and source.ts, with release() function in each.
	Added 'archiver' dependency for source building.
	Safe to say this project is in v0.1.0.

(#3)[1/5/2018-15:57 pre-alpha Sergix]
	Created regexp.ts file, with replacer() function.
	Created changelog get() and match() functions.
	Added %n, %s, %%(option)% options to format strings.
	Added tslint script to project package.

(#2)[1/4/2018-13:18 pre-alpha Sergix]
	Created changelog.ts, config.ts, exec.ts, program.ts files.
	Added basic template config file creation, which makes a 'vbconfig.json' file.