@@ -1,3 +1,9 @@
+(#13)[3/21/2018-22:44 1.2.0 Sergix]
+	Moved docs.replacer() to util.interpolate().
+	"dist" property paths can now include interpolaters, as well as a new interpolater %e for file extension.
+	"dist" property can now be a path to a file; if it is a directory it has a fallback default filename.
+	Pushed updates to Git.
+
 (#12)[3/21/2018-14:45 1.1.2 Sergix]
 	Fixed issue with template.json not being able to be read.
 	Pushed updates to Git.
